# bennu

./: .gitignore  404.html  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-docs.txt  sitemap.xml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: ci.yml  docker-images.yml  docs.yml  release.yml  sil-smoke.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
blog/: index.html
build-guide/: index.html
build-guide/00-parts-checklist/: index.html
build-guide/01-frame-assembly/: index.html
concepts/: index.html
concepts/obstacle-avoidance/: index.html
concepts/photogrammetry-pipeline/: index.html
concepts/simulation-stack/: index.html
concepts/system-architecture/: index.html
config/camera_calibration/: imx477_6mm.yaml
contract/v1/: README.md  images.schema.json  manifest.schema.json
decisions/: index.html
decisions/001-px4-over-ardupilot/: index.html
decisions/002-pi5-companion-computer/: index.html
decisions/003-rolling-shutter-camera/: index.html
decisions/004-uxrce-dds-over-mavros/: index.html
decisions/005-ros2-oss-package-adoption/: index.html
decisions/006-simulation-first-sil/: index.html
decisions/007-platform-readiness-phases-0-2/: index.html
docs/: index.md
docs/build-guide/: 00-parts-checklist.md  01-frame-assembly.md  index.md
docs/concepts/: index.md  obstacle-avoidance.md  photogrammetry-pipeline.md  simulation-stack.md  system-architecture.md
docs/decisions/: 001-px4-over-ardupilot.md  002-pi5-companion-computer.md  003-rolling-shutter-camera.md  index.md  (+4 more)
drone/: setup_pi.sh
drone/ros2_ws/src/bennu_bringup/: package.xml  setup.cfg  setup.py
drone/ros2_ws/src/bennu_bringup/config/: camera_params.yaml
drone/ros2_ws/src/bennu_bringup/config/sensor_configs/: inspection.yaml  mapping.yaml  survey.yaml
drone/ros2_ws/src/bennu_bringup/launch/: drone.launch.py
drone/ros2_ws/src/bennu_camera/: package.xml  setup.cfg  setup.py
drone/ros2_ws/src/bennu_camera/bennu_camera/: __init__.py  calibration.py  camera_node.py  capture_backend.py  geotag.py  quality.py  sensor_config.py
drone/ros2_ws/src/bennu_camera/bennu_camera/backends/: __init__.py  libcamera_backend.py  placeholder_backend.py
drone/ros2_ws/src/bennu_camera/test/: test_backends.py  test_calibration.py  test_camera_node.py  test_capture_pipeline.py  test_geotag.py  test_quality.py  test_sensor_config.py
drone/ros2_ws/src/bennu_core/: package.xml  setup.cfg  setup.py
drone/ros2_ws/src/bennu_core/bennu_core/: __init__.py  drone_identity.py
drone/ros2_ws/src/bennu_core/test/: test_drone_identity.py
drone/ros2_ws/src/bennu_dataset/: package.xml  setup.cfg  setup.py
drone/ros2_ws/src/bennu_dataset/bennu_dataset/: __init__.py  packager.py  signer.py
drone/ros2_ws/src/bennu_dataset/test/: test_packager.py  test_signer.py
drone/ros2_ws/src/bennu_survey/: package.xml  setup.cfg  setup.py
drone/ros2_ws/src/bennu_survey/bennu_survey/: __init__.py  grid_planner.py
drone/ros2_ws/src/bennu_survey/test/: test_grid_planner.py
frame/: README.md
how-to/: index.html
plans/: index.html
reference/: index.html
search/: search_index.json
sim/: Dockerfile.px4  Dockerfile.ros2  Makefile  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.sil.yml  docker-compose.sim.yml  gpu.yml  setup_nvidia_docker.sh
tutorials/: index.html
(+89 files in other folders)
