[project]
name = "bennu"
version = "0.1.0"
description = "DIY 7-inch photogrammetry drone — PX4 + ROS2 + OpenDroneMap"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Fadi Labib", email = "github@fadilabib.com" },
]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PERF", "C90"]
ignore = ["E501"]  # Line length handled by formatter

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["bennu_camera", "bennu_core", "bennu_dataset", "bennu_mission", "bennu_bringup", "bennu_survey"]
