<?xml version="1.0"?>
<package format="3">
  <name>bennu_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and config for Bennu drone</description>
  <maintainer email="github@fadilabib.com">Fadi Labib</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>bennu_camera</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
