<?xml version="1.0"?>
<package format="3">
  <name>bennu_core</name>
  <version>0.1.0</version>
  <description>Drone identity and hardware manifest for Bennu</description>
  <maintainer email="github@fadilabib.com">Fadi Labib</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
